# coolercontrol-plugin-supermicro-h12ssli

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  flake.nix  install.sh
plugin-files/: config-example.json  config.json  manifest.toml
plugin-files/ui/: index.html
src/: config.rs  executor.rs  main.rs  service.rs
